# bevy-planty

./: CNAME  Cargo.toml  index.html  planty.d.ts  planty.js  planty_bg.wasm.d.ts
.github/workflows/: rust.yml
src/: events.rs  input.rs  lib.rs  main.rs  plant.rs  resize.rs  ui.rs
