[package]
name = "planty"
version = "0.1.0"
edition = "2021"

[lib]
name = "pl"

[dependencies]
bevy_polyline = "0.1"
lazy_static = "1.4"
regex = "1.5"
anyhow = "1"
thiserror = "1"
smooth-bevy-cameras = "0.2"

[dependencies.dcc-lsystem]
git = "https://github.com/piedoom/dcc-lsystem"
default_features = false

[dependencies.ron]
version = "0.7"

[dependencies.serde]
version = "1"
default_features = true

[dependencies.bevy]
default_features = false
version = "0.6"
features = ["render", "x11", "bevy_winit"]

[dependencies.bevy_egui]
branch = "main"
git = "https://github.com/mvlabat/bevy_egui"

[dependencies.rand]
version = "*"

[patch]
[patch.crates-io]
[patch.crates-io.bevy]
#branch = "main"
rev = "b13f238fc73692741ff87f804117770b1f42933c"
git = "https://github.com/bevyengine/bevy"

[target]
[target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))"]
[target."cfg(all(target_arch = \"wasm32\", target_os = \"unknown\"))".dependencies]
futures = "0.3"
gloo-events = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }
